appId: ${APP_ID}
name: Create a finite Goal with a Reward
tags:
  - goals
  - critical
  - smoke
---
- launchApp:
    clearState: true
- runScript:
    file: ../../scripts/prepare-auth-user.js
    env:
      CREATE_VIA_API: 'true'
- runFlow:
    file: ../../subflows/login.yaml
    env:
      EMAIL: ${output.auth.email}
      PASSWORD: ${output.auth.password}
- assertVisible:
    id: ${TEST_ID_DASHBOARD_SCREEN}
- tapOn:
    id: ${TEST_ID_DASHBOARD_ADD_GOAL_BUTTON}
- assertVisible:
    id: ${TEST_ID_GOALS_FORM_SHEET}
- tapOn:
    id: ${TEST_ID_GOALS_FORM_TITLE_INPUT}
- inputText: Maestro reading Goal
- tapOn:
    id: ${TEST_ID_GOALS_FORM_TARGET_INPUT}
- inputText: '2'
- scrollUntilVisible:
    element:
      id: ${TEST_ID_GOALS_FORM_REWARD_TOGGLE}
    direction: DOWN
- tapOn:
    id: ${TEST_ID_GOALS_FORM_REWARD_TOGGLE}
- tapOn:
    id: ${TEST_ID_GOALS_FORM_REWARD_TITLE_INPUT}
- inputText: Maestro book Reward
- tapOn:
    id: ${TEST_ID_GOALS_FORM_REWARD_REQUIRED_PROGRESS_INPUT}
- inputText: '2'
- hideKeyboard
- scrollUntilVisible:
    element:
      id: ${TEST_ID_GOALS_FORM_SUBMIT_BUTTON}
    direction: DOWN
- tapOn:
    id: ${TEST_ID_GOALS_FORM_SUBMIT_BUTTON}
- assertVisible: Maestro reading Goal
- assertVisible: Maestro book Reward
